PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/Investment_Vehicle__c.object-meta.xml
<CustomObject>
    <label>Investment Vehicle</label>
    <nameField>
        <label>Fund Short Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investment Vehicles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>