PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/AUM_USD__c.field-meta.xml
<CustomField>
    <fullName>AUM_USD__c</fullName>
    <inlineHelpText>PSG roll up from Investor Position parents</inlineHelpText>
    <label>AUM (USD)</label>
    <summarizedField>Investor_Position__c.Total_AUM__c</summarizedField>
    <summaryFilterItems>
        <field>Investor_Position__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Parent Public Securities</value>
    </summaryFilterItems>
    <summaryForeignKey>Investor_Position__c.Investment_Vehicle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>