PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Available_for_Drawdown_USD_Before_Sub__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Drawdown_USD_Before_Sub__c</fullName>
    <inlineHelpText>Roll up from most Investor Position records totalling the amount Available For Drawdown without the Subscription Facility Amount.</inlineHelpText>
    <label>Available for Drawdown - Before Sub</label>
    <summarizedField>Investor_Position__c.Available_for_Drawdown_USD_Before_Sub__c</summarizedField>
    <summaryFilterItems>
        <field>Investor_Position__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Investor_Position__c.Investment_Vehicle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>