PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Average_Current_Comitment_by_investor__c.field-meta.xml
<CustomField>
    <fullName>Average_Current_Comitment_by_investor__c</fullName>
    <formula>if(Number_of_Current_Investors__c &gt; 0, Current_Commitments_USD__c /  Number_of_Current_Investors__c, Current_Commitments_USD__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated automatically based on the Number of Current Investors and the total Current Commitments - USD.</inlineHelpText>
    <label>Avg Current Commitment by Investor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>