PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/BIM_Strategy__c.field-meta.xml
<CustomField>
    <fullName>BIM_Strategy__c</fullName>
    <label>PSG Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Diversified Real Assets</fullName>
            </value>
            <value>
                <fullName>Energy Infrastructure</fullName>
            </value>
            <value>
                <fullName>General Overview</fullName>
            </value>
            <value>
                <fullName>Global Infrastructure</fullName>
            </value>
            <value>
                <fullName>Infrastructure Long/Short</fullName>
                <label>Global Infrastructure Long/Short</label>
            </value>
            <value>
                <fullName>Global Real Estate</fullName>
            </value>
            <value>
                <fullName>Global Renewables</fullName>
            </value>
            <value>
                <fullName>Real Asset Debt</fullName>
            </value>
            <value>
                <fullName>Real Assets Hybrid</fullName>
            </value>
            <value>
                <fullName>U.S. Real Estate</fullName>
            </value>
            <value>
                <fullName>Wells Street</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>