PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <formula>CASE( 
RecordType.Name , 
&quot;Credit Opportunities&quot;, IMAGE (&quot;/servlet/servlet.FileDownload?file=0150b000002EKJS&quot;, &quot;Shared&quot;), 
&quot;Fund External&quot;, IMAGE (&quot;/servlet/servlet.FileDownload?file=0150b000002EKJh&quot;, &quot;BAM&quot;), 
&quot;Fund Internal&quot;, IMAGE (&quot;/servlet/servlet.FileDownload?file=0150b000002EKJX&quot;, &quot;PFG&quot;), 
&quot;Listed Issuers&quot;, IMAGE (&quot;/servlet/servlet.FileDownload?file=0150b000002EKJh&quot;, &quot;BAM&quot;), 
&quot;Public Securities&quot;, IMAGE (&quot;/servlet/servlet.FileDownload?file=0150b000002EKJc&quot;, &quot;PSG&quot;), 
IMAGE (&quot;/resource/1494353630000/GraphicsPackNew/fatcow/farmfresh/16/exclamation.png&quot;, &quot;Inactive&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Group</label>
    <type>Text</type>
</CustomField>