PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/BusinessGroup__c.field-meta.xml
<CustomField>
    <fullName>BusinessGroup__c</fullName>
    <label>Business Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Timber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>