PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Carried_Interest__c.field-meta.xml
<CustomField>
    <fullName>Carried_Interest__c</fullName>
    <description>Carried Interest Fee Rate</description>
    <label>Carried Interest</label>
    <length>250</length>
    <type>Text</type>
</CustomField>