PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Close_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Close_Quarter__c</fullName>
    <label>Close Quarter</label>
    <type>Date</type>
</CustomField>