PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Close_Quarter_Thayer__c.field-meta.xml
<CustomField>
    <fullName>Close_Quarter_Thayer__c</fullName>
    <label>Close Quarter (Thayer)</label>
    <type>Date</type>
</CustomField>