PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Co_Invest_Classification__c.field-meta.xml
<CustomField>
    <fullName>Co_Invest_Classification__c</fullName>
    <description>Use to further classify the type of Co-Investment</description>
    <inlineHelpText>Use to further classify the type of Co-Investment</inlineHelpText>
    <label>Co-Invest Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Co-Invest - Fund</fullName>
            </value>
            <value>
                <fullName>Co-Invest - Listed Vehicle</fullName>
            </value>
            <value>
                <fullName>Co-Invest - Other Vehicle</fullName>
            </value>
            <value>
                <fullName>Syndication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>