PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Current_Commitments_Functional_Currenc__c.field-meta.xml
<CustomField>
    <fullName>Current_Commitments_Functional_Currenc__c</fullName>
    <inlineHelpText>Roll up from most recent Investor Position records totalling the total Current Commitments in the Fund in Functional Currency.

Current commitment is how much has been currently invested + available for drawndown left.</inlineHelpText>
    <label>Current Commitment - Func. Currency</label>
    <summarizedField>Investor_Position__c.Current_Commitments_Functional__c</summarizedField>
    <summaryFilterItems>
        <field>Investor_Position__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Investor_Position__c.Investment_Vehicle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>