PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Current_Commitments_Invested__c.field-meta.xml
<CustomField>
    <fullName>Current_Commitments_Invested__c</fullName>
    <formula>IF (Current_Commitments_USD__c &gt; 0, Equity_Invested_After_Sub__c /  Current_Commitments_USD__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>% of Current Commitments Invested</inlineHelpText>
    <label>Current Commitments Invested</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>