PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Current_Investor__c.field-meta.xml
<CustomField>
    <fullName>Current_Investor__c</fullName>
    <label>Current Investor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>