PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Equity_Invested_After_Sub__c.field-meta.xml
<CustomField>
    <fullName>Equity_Invested_After_Sub__c</fullName>
    <inlineHelpText>Roll up from most recent Investor Position records totalling the Equity Invested including Subscription Facility Amount (short term loan).</inlineHelpText>
    <label>Equity Invested - After Sub</label>
    <summarizedField>Investor_Position__c.Equity_Invested_After_Sub__c</summarizedField>
    <summaryFilterItems>
        <field>Investor_Position__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Investor_Position__c.Investment_Vehicle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>