PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Exclude_from_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To exclude certain investment vehicles from Tracker reporting</description>
    <inlineHelpText>To exclude certain investment vehicles from Tracker reporting.  Mostly used for Co-Investment offering tracking.</inlineHelpText>
    <label>Exclude from Reporting</label>
    <type>Checkbox</type>
</CustomField>