PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Date__c</fullName>
    <description>Fund&#39;s additional extended date from its original term</description>
    <inlineHelpText>Fund&#39;s additional extended date from its original term</inlineHelpText>
    <label>Extension Date</label>
    <type>Date</type>
</CustomField>