PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Extensions_Taken__c.field-meta.xml
<CustomField>
    <fullName>Extensions_Taken__c</fullName>
    <inlineHelpText>Fund&#39;s additional extension from its term (ie. from 10 years to 12)</inlineHelpText>
    <label>Extensions Taken</label>
    <length>100</length>
    <type>Text</type>
</CustomField>