PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/External_Raised_Capital__c.field-meta.xml
<CustomField>
    <fullName>External_Raised_Capital__c</fullName>
    <inlineHelpText>Roll up total of External Raised (Historical/Original) Capital (LPs and Operating Partners)</inlineHelpText>
    <label>External Raised Capital</label>
    <summarizedField>Investor_Position__c.Historical_Commitment_US__c</summarizedField>
    <summaryFilterItems>
        <field>Investor_Position__c.Source_of_Capital__c</field>
        <operation>equals</operation>
        <value>Limited Partners, Operating Partner</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Investor_Position__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Investor_Position__c.Investment_Vehicle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>