PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/External_Target_Capital_Previous_Year__c.field-meta.xml
<CustomField>
    <fullName>External_Target_Capital_Previous_Year__c</fullName>
    <label>External Target Capital (Previous Year)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>