PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Fee_Base_Investment_Period__c.field-meta.xml
<CustomField>
    <fullName>Fee_Base_Investment_Period__c</fullName>
    <label>Fee Base - Investment Period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>