PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Fee_Base_Other__c.field-meta.xml
<CustomField>
    <fullName>Fee_Base_Other__c</fullName>
    <label>Fee Base - Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>