PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Fee_Comments__c.field-meta.xml
<CustomField>
    <fullName>Fee_Comments__c</fullName>
    <description>Details if fee base, headline rates etc are different from the standard ones</description>
    <inlineHelpText>Details if fee base, headline rates etc are different from the standard ones</inlineHelpText>
    <label>Fee - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>