PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Fee_on_BAM_Capital__c.field-meta.xml
<CustomField>
    <fullName>Fee_on_BAM_Capital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee on BAM Capital</label>
    <type>Checkbox</type>
</CustomField>