PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/FHR_Investment_Period_Committed__c.field-meta.xml
<CustomField>
    <fullName>FHR_Investment_Period_Committed__c</fullName>
    <inlineHelpText>Fund Headline Rate based on Committed Amount

Fund Headline Rate is the actual advertised rate for the particular fund before discounts and incentives.</inlineHelpText>
    <label>FHR - Inv Period - Committed</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>