PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/FHR_Post_Investment_Period_Univested__c.field-meta.xml
<CustomField>
    <fullName>FHR_Post_Investment_Period_Univested__c</fullName>
    <inlineHelpText>Fund Headline Rate for the duration of the fund on the amount uninvested post-investment period.

Fund Headline Rate is the actual advertised rate for the particular fund before discounts and incentives.</inlineHelpText>
    <label>FHR - Post Inv Period - Uninvested</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>