PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Flagship__c.field-meta.xml
<CustomField>
    <fullName>Flagship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flagship</label>
    <type>Checkbox</type>
</CustomField>