PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Fund_GAV__c.field-meta.xml
<CustomField>
    <fullName>Fund_GAV__c</fullName>
    <inlineHelpText>Roll up from most recent Investor Position records totalling the Gross Asset Value of a fund pro-rated by Fund commitments.</inlineHelpText>
    <label>Fund GAV</label>
    <summarizedField>Investor_Position__c.GAV__c</summarizedField>
    <summaryFilterItems>
        <field>Investor_Position__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Investor_Position__c.Investment_Vehicle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>