PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Fund_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Fund_Launch_Date__c</fullName>
    <description>The official start date the Fundraising efforts</description>
    <inlineHelpText>The official start date the Fundraising efforts</inlineHelpText>
    <label>Fund Launch Date</label>
    <length>9</length>
    <type>Text</type>
</CustomField>