PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Fund_Series__c.field-meta.xml
<CustomField>
    <fullName>Fund_Series__c</fullName>
    <description>Replaced &quot;Mandate - Series Family&quot; Field Type Change from Txt to Picklist 7/25/19</description>
    <inlineHelpText>Fund Family Series Previously &quot;Mandate - Series Family&quot;</inlineHelpText>
    <label>Fund Series</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>BBCP</fullName>
            </value>
            <value>
                <fullName>BBRF</fullName>
            </value>
            <value>
                <fullName>BBTF</fullName>
            </value>
            <value>
                <fullName>BCOF</fullName>
            </value>
            <value>
                <fullName>BCP</fullName>
            </value>
            <value>
                <fullName>BGTF</fullName>
            </value>
            <value>
                <fullName>BID (EURO)</fullName>
            </value>
            <value>
                <fullName>BID (USD)</fullName>
            </value>
            <value>
                <fullName>BIF</fullName>
            </value>
            <value>
                <fullName>BOZ</fullName>
            </value>
            <value>
                <fullName>BPREP</fullName>
            </value>
            <value>
                <fullName>BPREPA</fullName>
            </value>
            <value>
                <fullName>BREF</fullName>
            </value>
            <value>
                <fullName>BREOF</fullName>
            </value>
            <value>
                <fullName>Bridge</fullName>
            </value>
            <value>
                <fullName>BSIP</fullName>
            </value>
            <value>
                <fullName>BSREF</fullName>
            </value>
            <value>
                <fullName>BSREP</fullName>
            </value>
            <value>
                <fullName>CDN Office</fullName>
            </value>
            <value>
                <fullName>Columbia</fullName>
            </value>
            <value>
                <fullName>DTLA</fullName>
            </value>
            <value>
                <fullName>GGP</fullName>
            </value>
            <value>
                <fullName>India RE</fullName>
            </value>
            <value>
                <fullName>Kotak</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Peninsula</fullName>
            </value>
            <value>
                <fullName>Peru</fullName>
            </value>
            <value>
                <fullName>RETIP</fullName>
            </value>
            <value>
                <fullName>Spec Opps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>