PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Fund_Status__c.field-meta.xml
<CustomField>
    <fullName>Fund_Status__c</fullName>
    <label>Fund Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product Development</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Marketing Closed</fullName>
            </value>
            <value>
                <fullName>Fully Divested</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>