PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Fund_Terms__c.field-meta.xml
<CustomField>
    <fullName>Fund_Terms__c</fullName>
    <label>Fund Terms</label>
    <length>40</length>
    <type>Text</type>
</CustomField>