PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Historical_Commitment_Functional_Curre__c.field-meta.xml
<CustomField>
    <fullName>Historical_Commitment_Functional_Curre__c</fullName>
    <inlineHelpText>Roll up from most recent Investor Position records totalling the Historical/Original Commitments Raised for the Fund in Functional Currency.</inlineHelpText>
    <label>Raised Capital - Functional Currency</label>
    <summarizedField>Investor_Position__c.Historical_Commitment_Functional__c</summarizedField>
    <summaryFilterItems>
        <field>Investor_Position__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Investor_Position__c.Investment_Vehicle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>