PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Inception_Investment_Date__c.field-meta.xml
<CustomField>
    <fullName>Inception_Investment_Date__c</fullName>
    <inlineHelpText>First Investment Date from Track Record</inlineHelpText>
    <label>Inception/Investment Date</label>
    <type>Date</type>
</CustomField>