PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Initial_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Closing_Date__c</fullName>
    <label>Initial Closing Date</label>
    <type>Date</type>
</CustomField>