PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Internal_Capital__c.field-meta.xml
<CustomField>
    <fullName>Internal_Capital__c</fullName>
    <label>Internal Target Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>