PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Internal_Raised_Capital__c.field-meta.xml
<CustomField>
    <fullName>Internal_Raised_Capital__c</fullName>
    <inlineHelpText>Roll up total of  Internal Raised (Historical/Original) Capital (Sponsors (Brookfield) and Principals (Fund Team Members)</inlineHelpText>
    <label>Internal Raised Capital</label>
    <summarizedField>Investor_Position__c.Historical_Commitment_US__c</summarizedField>
    <summaryFilterItems>
        <field>Investor_Position__c.Source_of_Capital__c</field>
        <operation>equals</operation>
        <value>Sponsors, Principals, BAM Employees</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Investor_Position__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Investor_Position__c.Investment_Vehicle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>