PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Investment_Period_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Investment_Period_Begin_Date__c</fullName>
    <label>Investment Period Begin Date</label>
    <type>Date</type>
</CustomField>