PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Investment_Region__c.field-meta.xml
<CustomField>
    <fullName>Investment_Region__c</fullName>
    <label>Investment Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>