PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Investment_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Investment_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Fund to this co-investment</description>
    <inlineHelpText>Related Fund to this co-investment</inlineHelpText>
    <label>Related Fund</label>
    <referenceTo>Investment_Vehicle__c</referenceTo>
    <relationshipLabel>Co-Investments</relationshipLabel>
    <relationshipName>Investment_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>