PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Investment_Vehicle_ID_18_Char__c.field-meta.xml
<CustomField>
    <fullName>Investment_Vehicle_ID_18_Char__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment Vehicle ID 18 Char</label>
    <type>Text</type>
</CustomField>