PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Investor_Realized_Carried_Inception_to__c.field-meta.xml
<CustomField>
    <fullName>Investor_Realized_Carried_Inception_to__c</fullName>
    <inlineHelpText>Roll up from most recent Investor Position records totalling the Realized Carried Interest (share of a fund’s net profits allocated to the General Partner) from Inception to date.</inlineHelpText>
    <label>Inv Realized Carry - Inception to date</label>
    <summarizedField>Investor_Position__c.Realized_Carried_Interest_YTD__c</summarizedField>
    <summaryFilterItems>
        <field>Investor_Position__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Investor_Position__c.Investment_Vehicle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>