PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/InvVehicleRecordIDCaseInsensitive__c.field-meta.xml
<CustomField>
    <fullName>InvVehicleRecordIDCaseInsensitive__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InvVehicleRecordIDCaseInsensitiave</label>
    <type>Text</type>
</CustomField>