PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Key_Terms__c.field-meta.xml
<CustomField>
    <fullName>Key_Terms__c</fullName>
    <label>Key Terms</label>
    <length>100</length>
    <type>Text</type>
</CustomField>