PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Long_Name__c</fullName>
    <label>Fund Long Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>