PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Management_Fee_Annualized__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Annualized__c</fullName>
    <inlineHelpText>Roll up from most recent Investor Position records totalling the Management Fee on an annual basis.</inlineHelpText>
    <label>Management Fee - Annualized</label>
    <summarizedField>Investor_Position__c.Management_Fee_Annualized__c</summarizedField>
    <summaryFilterItems>
        <field>Investor_Position__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Investor_Position__c.Investment_Vehicle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>