PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Management_Fee_Base_Investment_Period__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Base_Investment_Period__c</fullName>
    <label>Management Fee Base - Inv Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Total Commitment (Funded &amp; Unfunded)</fullName>
            </value>
            <value>
                <fullName>Committed Capital</fullName>
            </value>
            <value>
                <fullName>Invested Capital</fullName>
            </value>
            <value>
                <fullName>Uninvested Capital</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>