PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Management_Fee_LTM__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_LTM__c</fullName>
    <label>Management Fee - LTM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>