PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Mandate_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Mandate_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Mandate External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>