PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Market_Value_AUM_Quarter_Static__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_AUM_Quarter_Static__c</fullName>
    <label>Market Value (AUM) - Quarter - Static</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>