PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Market_Value_AUM_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_AUM_Year_End__c</fullName>
    <label>Market Value (AUM) - Year End</label>
    <summarizedField>Investor_Position__c.Market_Value_AUM_Year_End__c</summarizedField>
    <summaryFilterItems>
        <field>Investor_Position__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Investor_Position__c.Investment_Vehicle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>