PROD_10-24-19/force-app/main/default/objects/Investment_Vehicle__c/fields/Next_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Close_Date__c</fullName>
    <description>Approximately when the next close date is</description>
    <inlineHelpText>Approximately when the next close date is; to help the CRMs update the Close Date on the Opportunities.  Please update this field.</inlineHelpText>
    <label>Next Close Date</label>
    <type>Date</type>
</CustomField>